# YepList

./: .gitignore  CHANGELOG.md  CodingStandards.md  LICENSE  README.md
backend/: ToDoList.slnx
backend/src/ToDoList.Api/: Program.cs  ToDoList.Api.csproj  appsettings.json  appsettings.json.example
backend/src/ToDoList.Api/Controllers/: CategoriesController.cs  DebugController.cs  LogViewerController.cs  SyncController.cs  TodoItemsController.cs  TodoListsController.cs
backend/src/ToDoList.Api/Middleware/: DeviceContextExtensions.cs  DeviceTrackingMiddleware.cs
backend/src/ToDoList.Api/Properties/: launchSettings.json
backend/src/ToDoList.Api/Services/: RetentionService.cs
backend/src/ToDoList.Api/wwwroot/docs/: index.html
backend/src/ToDoList.Core/: ToDoList.Core.csproj
backend/src/ToDoList.Core/Dtos/: CategoryDto.cs  CreateCategoryRequest.cs  CreateTodoItemRequest.cs  CreateTodoListRequest.cs  ReorderItemsRequest.cs  SyncResponseDto.cs  TodoItemDto.cs  TodoListDto.cs  ToggleCompleteRequest.cs  UpdateTodoItemRequest.cs
backend/src/ToDoList.Core/Interfaces/: IDbConnectionFactory.cs
backend/src/ToDoList.Core/Models/: Category.cs  DeletedEntity.cs  Device.cs  SyncLogEntry.cs  TodoItem.cs  TodoList.cs  WriteOutcome.cs
backend/src/ToDoList.Data/: DbConnectionFactory.cs  ToDoList.Data.csproj
backend/src/ToDoList.Data/Repositories/: CategoryRepository.cs  DeletedEntityRepository.cs  DeviceRepository.cs  SyncLogRepository.cs  TodoItemRepository.cs  TodoListRepository.cs
backend/src/ToDoList.Data/Schema/: init.sql
clients/android/: build-android.sh  build.bat  gradlew  gradlew.bat  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/gradle/: libs.versions.toml
clients/haiku/: Makefile
clients/haiku/package/: PackageInfo  build-hpkg.sh  build.ps1
clients/haiku/resources/: YepList.rdef
clients/haiku/src/: AboutWindow.cpp  AboutWindow.h  ApiClient.cpp  ApiClient.h  App.cpp  App.h  CategoryEditWindow.cpp  CategoryEditWindow.h  CategoryWindow.cpp  CategoryWindow.h  JsonHelper.cpp  JsonHelper.h  ListEditWindow.cpp  ListEditWindow.h  ListItem.cpp  ListItem.h  ListSidebar.cpp  ListSidebar.h  MainWindow.cpp  MainWindow.h  Models.cpp  Models.h  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h  TaskEditWindow.cpp  TaskEditWindow.h  TaskItem.cpp  TaskItem.h  TaskListView.cpp  TaskListView.h
clients/linux/: .gitignore  meson.build
clients/linux/data/: CHANGELOG.md  com.github.kevinadams05.yeplist.desktop
clients/linux/src/: AboutDialog.vala  ApiClient.vala  Application.vala  CategoryManagerDialog.vala  ListSidebar.vala  MainWindow.vala  Models.vala  RemoteLogger.vala  Settings.vala  SettingsDialog.vala  TaskEditDialog.vala  TaskRow.vala
clients/windows/: ToDoList.Windows.slnx
clients/windows/src/ToDoList.Windows/: AppSettings.cs  AppTheme.cs  Form1.Designer.cs  Form1.cs  MarkdownRenderer.cs  Program.cs  ToDoList.Windows.csproj  settings.json
docs/: GUIDE.md  sync-overhaul-notes.md
scripts/: deploy.sh  provision-server.sh
(+99 files in other folders)
